--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fas fa-bars" onclick="openmenu()"></i>    
         </nav>
         <div class="header-text">
-            <p>UI/UX Designer</p>
+            <p>Web Designer</p>
             <h1>Hi, I'm <span>Samik</span><br> Das from India</h1>
         </div>
     </div>
@@ -38,11 +38,11 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>dfsdvsd dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd dsdf 
-                    sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd 
-                    dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd 
-                    dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd 
-                    dsdf sdfsdfsddfsdvsd dsdf sdfsdfsddfsdvsd dsdf sdfsdfsd</p>
+                <p>College Student at National Institute of Technology, Agartala
+
+                    Greetings! My name is Samik Das, and I am an enthusiastic college student currently pursuing my education at the esteemed National Institute of Technology, Agartala. I am currently in my 4th semester, pursuing a Bachelor's degree in Computer Science and Engineering.<br></p>&nbsp;
+                    <p>
+                    One of my major areas of interest and expertise lies in cWeb development</b> and </b>Android development</b>. I have a strong passion for creating innovative and user-friendly digital solutions. Through my coursework and self-learning endeavors, I have gained proficiency in various programming languages such as <b>HTML, CSS, JavaScript</b> for web development. In the realm of Android development, I am well-versed in <b>Java</b> along with <b>Android Studio</b>.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -51,7 +51,7 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI?UX</span><br>Designing Web/App Interfaces</li>
+                            <li><span>Java Dev</span><br>Java Developer</li>
                             <li><span>Web Dev</span><br>Web app development</li>
                             <li><span>App Dev</span><br>Building Android/iOS apps</li>
                         </ul>
@@ -59,15 +59,14 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2023 - Current</span><br>Designing Web/App Interfaces</li>
-                            <li><span>2019-2921</span><br>Web app development</li>
-                            <li><span>2017-2019</span><br>Building Android/iOS apps</li>
+                            <li><span>2020-2022</span><br>Java development</li>
+                            <li><span>2020-2021</span><br>C++ development</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2016</span><br>Designing Web/App Interfaces</li>
-                            <li><span>2016</span><br>Web app development</li>
-                            <li><span>2014</span><br>Building Android/iOS apps</li>
+                            <li><span>2019</span><br>Higher-Secondary Class-XII</li>
+                            <li><span>2017</span><br>Secondary Class-X</li>
                         </ul>
                     </div>
             </div>
@@ -82,19 +81,36 @@
             <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
-                <p>Description for the heading</p>
+                <ul>
+                    <li>Proficiency in HTML, CSS, and JavaScript.</li>
+                    <li>Knowledge of responsive web design principles.</li>
+                    <li>Ability to create visually appealing and user-friendly websites.</li>
+                    <li>Familiarity with version control systems like Git.</li>
+                </ul>
                 <a href="#">Learn more</a>
             </div>
             <div>
-                <i class="fa-solid fa-crop-simple"></i>
-                <h2>Web Design</h2>
-                <p>Description for the heading</p>
+                <i class="fa-brands fa-java"></i>
+                <h2>Java Dev</h2>
+                <ul>
+                    <li>Proficient in Java programming language with strong understanding of object-oriented programming principles.</li>
+                    <li>Skilled in using Java development tools such as IntelliJ IDEA.</li>
+                    <li>Strong grasp of data structures and algorithms for optimized code performance.</li>
+                    <li>Effective collaboration and teamwork abilities in cross-functional environments.</li>
+                    <li>Committed to continuous learning and staying updated with Java advancements.</li>
+                </ul>
                 <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-android"></i>
-                <h2>Web Design</h2>
-                <p>Description for the heading</p>
+                <h2>Android Dev</h2>
+                <ul>
+                    <li>Strong command of Java programming languages.</li>
+                    <li>Proficient in using Android Studio for development.</li>
+                    <li>Experience in building native Android applications.</li>
+                    <li>Knowledge of Android UI/UX design principles.</li>
+                </ul>
+                
                 <a href="#">Learn more</a>
             </div>
         </div>
@@ -125,7 +141,7 @@
             <div class="work">
                 <img src="images/work-3.png" alt="">
                 <div class="layer">
-                    <h3>Register-Login App</h3>
+                    <h3>Ecommerce Website</h3>
                     <p>Description</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
