--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <h1 class="sub-title">About Me</h1>
                 <p>College Student at National Institute of Technology, Agartala
 
-                    Greetings! My name is Samik Das, and I am an enthusiastic college student currently pursuing my education at the esteemed National Institute of Technology, Agartala. I am currently in my 4th semester, pursuing a Bachelor's degree in Computer Science and Engineering.<br></p>&nbsp;
+                    Greetings! My name is Samik Das, and I am an enthusiastic college student currently pursuing my education at the esteemed National Institute of Technology, Agartala. I am currently in my 7th semester, pursuing a Bachelor's degree in Computer Science and Engineering.<br></p>&nbsp;
                     <p>
-                    One of my major areas of interest and expertise lies in cWeb development</b> and </b>Android development</b>. I have a strong passion for creating innovative and user-friendly digital solutions. Through my coursework and self-learning endeavors, I have gained proficiency in various programming languages such as <b>HTML, CSS, JavaScript</b> for web development. In the realm of Android development, I am well-versed in <b>Java</b> along with <b>Android Studio</b>.</p>
+                    One of my major areas of interest and expertise lies in <b>>Web development</b> and <b>Android development</b>. I have a strong passion for creating innovative and user-friendly digital solutions. Through my coursework and self-learning endeavors, I have gained proficiency in various programming languages such as <b>HTML, CSS, JavaScript</b> for web development. In the realm of Android development, I am well-versed in <b>Java</b> along with <b>Android Studio</b>.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
