--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div class="layer">
                     <h3>Ecommerce Website</h3>
                     <p>Description</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://frontendstoreecommercewebsite.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div> 
