--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
             <div class="work">
                 <img src="images/work-1.png" alt="">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>Description</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Social Media Website</h3>
+                    <p>This is a fully responsive social media website template
+                         using HTML and CSS.<br> This website design looks like Facebook.
+                          <br>Added user's profile page design with cover photo, 
+                          users image gallery, 
+                        friends list and list of post share by users.</p>
+                    <a href="https://friendverse.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -142,7 +146,11 @@
                 <img src="images/work-3.png" alt="">
                 <div class="layer">
                     <h3>Ecommerce Website</h3>
-                    <p>Description</p>
+                    <p>Fully Responsive home page of eCommerce website
+                         with <br>banner section,
+                         <br>some featured categories images,
+                         <br>then some featured products with product price,
+                         <br>image and rating.</p>
                     <a href="https://frontendstoreecommercewebsite.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
