--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/user.png">
+                <img src="images/istockphoto-476085198-612x612.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -42,7 +42,7 @@
 
                     Greetings! My name is Samik Das, and I am an enthusiastic college student currently pursuing my education at the esteemed National Institute of Technology, Agartala. I am currently in my 7th semester, pursuing a Bachelor's degree in Computer Science and Engineering.<br></p>&nbsp;
                     <p>
-                    One of my major areas of interest and expertise lies in <b>>Web development</b> and <b>Android development</b>. I have a strong passion for creating innovative and user-friendly digital solutions. Through my coursework and self-learning endeavors, I have gained proficiency in various programming languages such as <b>HTML, CSS, JavaScript</b> for web development. In the realm of Android development, I am well-versed in <b>Java</b> along with <b>Android Studio</b>.</p>
+                    One of my major areas of interest and expertise lies in <b>Web development</b> and <b>Android development</b>. I have a strong passion for creating innovative and user-friendly digital solutions. Through my coursework and self-learning endeavors, I have gained proficiency in various programming languages such as <b>HTML, CSS, JavaScript</b> for web development. In the realm of Android development, I am well-versed in <b>Java</b> along with <b>Android Studio</b>.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -172,7 +172,7 @@
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="Samik Das - Resume.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
